// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Reports should match snapshot upon load 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Reports />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <div
          className="dashboard"
>
          <div
                    className="total-samples"
          >
                    <h4>
                              TOTAL
                    </h4>
                    <h3 />
                    <h4>
                              SAMPLES
                    </h4>
          </div>
          <div
                    className="total-locations"
          >
                    <h4>
                              TOTAL
                    </h4>
                    <h3 />
                    <h4>
                              LOCATIONS
                    </h4>
          </div>
          <div
                    className="avg-samples"
          >
                    <h4>
                              AVERAGE
                    </h4>
                    <h3>
                              NaN
                    </h3>
                    <h4>
                              SAMPLES/LOCATION
                    </h4>
          </div>
          <div
                    className="avg-reflectance"
          >
                    <h4>
                              AVERAGE
                    </h4>
                    <h3>
                              NaN
                    </h3>
                    <h4>
                              REFLECTANCE
                    </h4>
          </div>
</div>,
        <form
          onSubmit={[Function]}
>
          <DropDown
                    handleChange={[Function]}
                    name="country"
                    options={Array []}
          />
          <DropDown
                    handleChange={[Function]}
                    name="region"
                    options={Array []}
          />
          <DropDown
                    handleChange={[Function]}
                    name="coordinates"
                    options={Array []}
          />
          <input
                    id="startDate"
                    name="startDate"
                    onChange={[Function]}
                    placeholder="Start Date"
                    type="text"
                    value=""
          />
          <input
                    id="endDate"
                    name="endDate"
                    onChange={[Function]}
                    placeholder="End Date"
                    type="text"
                    value=""
          />
          <button
                    type="submit"
          >
                    Generate Report
          </button>
</form>,
        false,
      ],
      "className": "Reports",
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <div
              className="total-samples"
>
              <h4>
                            TOTAL
              </h4>
              <h3 />
              <h4>
                            SAMPLES
              </h4>
</div>,
            <div
              className="total-locations"
>
              <h4>
                            TOTAL
              </h4>
              <h3 />
              <h4>
                            LOCATIONS
              </h4>
</div>,
            <div
              className="avg-samples"
>
              <h4>
                            AVERAGE
              </h4>
              <h3>
                            NaN
              </h3>
              <h4>
                            SAMPLES/LOCATION
              </h4>
</div>,
            <div
              className="avg-reflectance"
>
              <h4>
                            AVERAGE
              </h4>
              <h3>
                            NaN
              </h3>
              <h4>
                            REFLECTANCE
              </h4>
</div>,
          ],
          "className": "dashboard",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": Array [
                <h4>
                  TOTAL
</h4>,
                <h3 />,
                <h4>
                  SAMPLES
</h4>,
              ],
              "className": "total-samples",
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": "TOTAL",
                },
                "ref": null,
                "rendered": "TOTAL",
                "type": "h4",
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": 0,
                },
                "ref": null,
                "rendered": 0,
                "type": "h3",
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": "SAMPLES",
                },
                "ref": null,
                "rendered": "SAMPLES",
                "type": "h4",
              },
            ],
            "type": "div",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": Array [
                <h4>
                  TOTAL
</h4>,
                <h3 />,
                <h4>
                  LOCATIONS
</h4>,
              ],
              "className": "total-locations",
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": "TOTAL",
                },
                "ref": null,
                "rendered": "TOTAL",
                "type": "h4",
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": 0,
                },
                "ref": null,
                "rendered": 0,
                "type": "h3",
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": "LOCATIONS",
                },
                "ref": null,
                "rendered": "LOCATIONS",
                "type": "h4",
              },
            ],
            "type": "div",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": Array [
                <h4>
                  AVERAGE
</h4>,
                <h3>
                  NaN
</h3>,
                <h4>
                  SAMPLES/LOCATION
</h4>,
              ],
              "className": "avg-samples",
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": "AVERAGE",
                },
                "ref": null,
                "rendered": "AVERAGE",
                "type": "h4",
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": "NaN",
                },
                "ref": null,
                "rendered": "NaN",
                "type": "h3",
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": "SAMPLES/LOCATION",
                },
                "ref": null,
                "rendered": "SAMPLES/LOCATION",
                "type": "h4",
              },
            ],
            "type": "div",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": Array [
                <h4>
                  AVERAGE
</h4>,
                <h3>
                  NaN
</h3>,
                <h4>
                  REFLECTANCE
</h4>,
              ],
              "className": "avg-reflectance",
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": "AVERAGE",
                },
                "ref": null,
                "rendered": "AVERAGE",
                "type": "h4",
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": "NaN",
                },
                "ref": null,
                "rendered": "NaN",
                "type": "h3",
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": "REFLECTANCE",
                },
                "ref": null,
                "rendered": "REFLECTANCE",
                "type": "h4",
              },
            ],
            "type": "div",
          },
        ],
        "type": "div",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <DropDown
              handleChange={[Function]}
              name="country"
              options={Array []}
/>,
            <DropDown
              handleChange={[Function]}
              name="region"
              options={Array []}
/>,
            <DropDown
              handleChange={[Function]}
              name="coordinates"
              options={Array []}
/>,
            <input
              id="startDate"
              name="startDate"
              onChange={[Function]}
              placeholder="Start Date"
              type="text"
              value=""
/>,
            <input
              id="endDate"
              name="endDate"
              onChange={[Function]}
              placeholder="End Date"
              type="text"
              value=""
/>,
            <button
              type="submit"
>
              Generate Report
</button>,
          ],
          "onSubmit": [Function],
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "handleChange": [Function],
              "name": "country",
              "options": Array [],
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "handleChange": [Function],
              "name": "region",
              "options": Array [],
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "handleChange": [Function],
              "name": "coordinates",
              "options": Array [],
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "id": "startDate",
              "name": "startDate",
              "onChange": [Function],
              "placeholder": "Start Date",
              "type": "text",
              "value": "",
            },
            "ref": null,
            "rendered": null,
            "type": "input",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "id": "endDate",
              "name": "endDate",
              "onChange": [Function],
              "placeholder": "End Date",
              "type": "text",
              "value": "",
            },
            "ref": null,
            "rendered": null,
            "type": "input",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "Generate Report",
              "type": "submit",
            },
            "ref": null,
            "rendered": "Generate Report",
            "type": "button",
          },
        ],
        "type": "form",
      },
      false,
    ],
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <div
            className="dashboard"
>
            <div
                        className="total-samples"
            >
                        <h4>
                                    TOTAL
                        </h4>
                        <h3 />
                        <h4>
                                    SAMPLES
                        </h4>
            </div>
            <div
                        className="total-locations"
            >
                        <h4>
                                    TOTAL
                        </h4>
                        <h3 />
                        <h4>
                                    LOCATIONS
                        </h4>
            </div>
            <div
                        className="avg-samples"
            >
                        <h4>
                                    AVERAGE
                        </h4>
                        <h3>
                                    NaN
                        </h3>
                        <h4>
                                    SAMPLES/LOCATION
                        </h4>
            </div>
            <div
                        className="avg-reflectance"
            >
                        <h4>
                                    AVERAGE
                        </h4>
                        <h3>
                                    NaN
                        </h3>
                        <h4>
                                    REFLECTANCE
                        </h4>
            </div>
</div>,
          <form
            onSubmit={[Function]}
>
            <DropDown
                        handleChange={[Function]}
                        name="country"
                        options={Array []}
            />
            <DropDown
                        handleChange={[Function]}
                        name="region"
                        options={Array []}
            />
            <DropDown
                        handleChange={[Function]}
                        name="coordinates"
                        options={Array []}
            />
            <input
                        id="startDate"
                        name="startDate"
                        onChange={[Function]}
                        placeholder="Start Date"
                        type="text"
                        value=""
            />
            <input
                        id="endDate"
                        name="endDate"
                        onChange={[Function]}
                        placeholder="End Date"
                        type="text"
                        value=""
            />
            <button
                        type="submit"
            >
                        Generate Report
            </button>
</form>,
          false,
        ],
        "className": "Reports",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <div
                className="total-samples"
>
                <h4>
                                TOTAL
                </h4>
                <h3 />
                <h4>
                                SAMPLES
                </h4>
</div>,
              <div
                className="total-locations"
>
                <h4>
                                TOTAL
                </h4>
                <h3 />
                <h4>
                                LOCATIONS
                </h4>
</div>,
              <div
                className="avg-samples"
>
                <h4>
                                AVERAGE
                </h4>
                <h3>
                                NaN
                </h3>
                <h4>
                                SAMPLES/LOCATION
                </h4>
</div>,
              <div
                className="avg-reflectance"
>
                <h4>
                                AVERAGE
                </h4>
                <h3>
                                NaN
                </h3>
                <h4>
                                REFLECTANCE
                </h4>
</div>,
            ],
            "className": "dashboard",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": Array [
                  <h4>
                    TOTAL
</h4>,
                  <h3 />,
                  <h4>
                    SAMPLES
</h4>,
                ],
                "className": "total-samples",
              },
              "ref": null,
              "rendered": Array [
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": "TOTAL",
                  },
                  "ref": null,
                  "rendered": "TOTAL",
                  "type": "h4",
                },
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": 0,
                  },
                  "ref": null,
                  "rendered": 0,
                  "type": "h3",
                },
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": "SAMPLES",
                  },
                  "ref": null,
                  "rendered": "SAMPLES",
                  "type": "h4",
                },
              ],
              "type": "div",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": Array [
                  <h4>
                    TOTAL
</h4>,
                  <h3 />,
                  <h4>
                    LOCATIONS
</h4>,
                ],
                "className": "total-locations",
              },
              "ref": null,
              "rendered": Array [
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": "TOTAL",
                  },
                  "ref": null,
                  "rendered": "TOTAL",
                  "type": "h4",
                },
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": 0,
                  },
                  "ref": null,
                  "rendered": 0,
                  "type": "h3",
                },
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": "LOCATIONS",
                  },
                  "ref": null,
                  "rendered": "LOCATIONS",
                  "type": "h4",
                },
              ],
              "type": "div",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": Array [
                  <h4>
                    AVERAGE
</h4>,
                  <h3>
                    NaN
</h3>,
                  <h4>
                    SAMPLES/LOCATION
</h4>,
                ],
                "className": "avg-samples",
              },
              "ref": null,
              "rendered": Array [
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": "AVERAGE",
                  },
                  "ref": null,
                  "rendered": "AVERAGE",
                  "type": "h4",
                },
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": "NaN",
                  },
                  "ref": null,
                  "rendered": "NaN",
                  "type": "h3",
                },
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": "SAMPLES/LOCATION",
                  },
                  "ref": null,
                  "rendered": "SAMPLES/LOCATION",
                  "type": "h4",
                },
              ],
              "type": "div",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": Array [
                  <h4>
                    AVERAGE
</h4>,
                  <h3>
                    NaN
</h3>,
                  <h4>
                    REFLECTANCE
</h4>,
                ],
                "className": "avg-reflectance",
              },
              "ref": null,
              "rendered": Array [
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": "AVERAGE",
                  },
                  "ref": null,
                  "rendered": "AVERAGE",
                  "type": "h4",
                },
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": "NaN",
                  },
                  "ref": null,
                  "rendered": "NaN",
                  "type": "h3",
                },
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": "REFLECTANCE",
                  },
                  "ref": null,
                  "rendered": "REFLECTANCE",
                  "type": "h4",
                },
              ],
              "type": "div",
            },
          ],
          "type": "div",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <DropDown
                handleChange={[Function]}
                name="country"
                options={Array []}
/>,
              <DropDown
                handleChange={[Function]}
                name="region"
                options={Array []}
/>,
              <DropDown
                handleChange={[Function]}
                name="coordinates"
                options={Array []}
/>,
              <input
                id="startDate"
                name="startDate"
                onChange={[Function]}
                placeholder="Start Date"
                type="text"
                value=""
/>,
              <input
                id="endDate"
                name="endDate"
                onChange={[Function]}
                placeholder="End Date"
                type="text"
                value=""
/>,
              <button
                type="submit"
>
                Generate Report
</button>,
            ],
            "onSubmit": [Function],
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "handleChange": [Function],
                "name": "country",
                "options": Array [],
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "handleChange": [Function],
                "name": "region",
                "options": Array [],
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "handleChange": [Function],
                "name": "coordinates",
                "options": Array [],
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "id": "startDate",
                "name": "startDate",
                "onChange": [Function],
                "placeholder": "Start Date",
                "type": "text",
                "value": "",
              },
              "ref": null,
              "rendered": null,
              "type": "input",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "id": "endDate",
                "name": "endDate",
                "onChange": [Function],
                "placeholder": "End Date",
                "type": "text",
                "value": "",
              },
              "ref": null,
              "rendered": null,
              "type": "input",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "Generate Report",
                "type": "submit",
              },
              "ref": null,
              "rendered": "Generate Report",
              "type": "button",
            },
          ],
          "type": "form",
        },
        false,
      ],
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
    "disableLifecycleMethods": true,
  },
}
`;

exports[`Reports should match the snapshot when it has locations 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Reports />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <div
          className="dashboard"
>
          <div
                    className="total-samples"
          >
                    <h4>
                              TOTAL
                    </h4>
                    <h3 />
                    <h4>
                              SAMPLES
                    </h4>
          </div>
          <div
                    className="total-locations"
          >
                    <h4>
                              TOTAL
                    </h4>
                    <h3>
                              3
                    </h3>
                    <h4>
                              LOCATIONS
                    </h4>
          </div>
          <div
                    className="avg-samples"
          >
                    <h4>
                              AVERAGE
                    </h4>
                    <h3>
                              0.00
                    </h3>
                    <h4>
                              SAMPLES/LOCATION
                    </h4>
          </div>
          <div
                    className="avg-reflectance"
          >
                    <h4>
                              AVERAGE
                    </h4>
                    <h3>
                              NaN
                    </h3>
                    <h4>
                              REFLECTANCE
                    </h4>
          </div>
</div>,
        <form
          onSubmit={[Function]}
>
          <DropDown
                    handleChange={[Function]}
                    name="country"
                    options={
                              Array [
                                        "Argentina",
                                        "Peru",
                                      ]
                    }
          />
          <DropDown
                    handleChange={[Function]}
                    name="region"
                    options={Array []}
          />
          <DropDown
                    handleChange={[Function]}
                    name="coordinates"
                    options={Array []}
          />
          <input
                    id="startDate"
                    name="startDate"
                    onChange={[Function]}
                    placeholder="Start Date"
                    type="text"
                    value=""
          />
          <input
                    id="endDate"
                    name="endDate"
                    onChange={[Function]}
                    placeholder="End Date"
                    type="text"
                    value=""
          />
          <button
                    type="submit"
          >
                    Generate Report
          </button>
</form>,
        false,
      ],
      "className": "Reports",
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <div
              className="total-samples"
>
              <h4>
                            TOTAL
              </h4>
              <h3 />
              <h4>
                            SAMPLES
              </h4>
</div>,
            <div
              className="total-locations"
>
              <h4>
                            TOTAL
              </h4>
              <h3>
                            3
              </h3>
              <h4>
                            LOCATIONS
              </h4>
</div>,
            <div
              className="avg-samples"
>
              <h4>
                            AVERAGE
              </h4>
              <h3>
                            0.00
              </h3>
              <h4>
                            SAMPLES/LOCATION
              </h4>
</div>,
            <div
              className="avg-reflectance"
>
              <h4>
                            AVERAGE
              </h4>
              <h3>
                            NaN
              </h3>
              <h4>
                            REFLECTANCE
              </h4>
</div>,
          ],
          "className": "dashboard",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": Array [
                <h4>
                  TOTAL
</h4>,
                <h3 />,
                <h4>
                  SAMPLES
</h4>,
              ],
              "className": "total-samples",
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": "TOTAL",
                },
                "ref": null,
                "rendered": "TOTAL",
                "type": "h4",
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": 0,
                },
                "ref": null,
                "rendered": 0,
                "type": "h3",
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": "SAMPLES",
                },
                "ref": null,
                "rendered": "SAMPLES",
                "type": "h4",
              },
            ],
            "type": "div",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": Array [
                <h4>
                  TOTAL
</h4>,
                <h3>
                  3
</h3>,
                <h4>
                  LOCATIONS
</h4>,
              ],
              "className": "total-locations",
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": "TOTAL",
                },
                "ref": null,
                "rendered": "TOTAL",
                "type": "h4",
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": 3,
                },
                "ref": null,
                "rendered": 3,
                "type": "h3",
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": "LOCATIONS",
                },
                "ref": null,
                "rendered": "LOCATIONS",
                "type": "h4",
              },
            ],
            "type": "div",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": Array [
                <h4>
                  AVERAGE
</h4>,
                <h3>
                  0.00
</h3>,
                <h4>
                  SAMPLES/LOCATION
</h4>,
              ],
              "className": "avg-samples",
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": "AVERAGE",
                },
                "ref": null,
                "rendered": "AVERAGE",
                "type": "h4",
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": "0.00",
                },
                "ref": null,
                "rendered": "0.00",
                "type": "h3",
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": "SAMPLES/LOCATION",
                },
                "ref": null,
                "rendered": "SAMPLES/LOCATION",
                "type": "h4",
              },
            ],
            "type": "div",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": Array [
                <h4>
                  AVERAGE
</h4>,
                <h3>
                  NaN
</h3>,
                <h4>
                  REFLECTANCE
</h4>,
              ],
              "className": "avg-reflectance",
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": "AVERAGE",
                },
                "ref": null,
                "rendered": "AVERAGE",
                "type": "h4",
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": "NaN",
                },
                "ref": null,
                "rendered": "NaN",
                "type": "h3",
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": "REFLECTANCE",
                },
                "ref": null,
                "rendered": "REFLECTANCE",
                "type": "h4",
              },
            ],
            "type": "div",
          },
        ],
        "type": "div",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <DropDown
              handleChange={[Function]}
              name="country"
              options={
                            Array [
                                          "Argentina",
                                          "Peru",
                                        ]
              }
/>,
            <DropDown
              handleChange={[Function]}
              name="region"
              options={Array []}
/>,
            <DropDown
              handleChange={[Function]}
              name="coordinates"
              options={Array []}
/>,
            <input
              id="startDate"
              name="startDate"
              onChange={[Function]}
              placeholder="Start Date"
              type="text"
              value=""
/>,
            <input
              id="endDate"
              name="endDate"
              onChange={[Function]}
              placeholder="End Date"
              type="text"
              value=""
/>,
            <button
              type="submit"
>
              Generate Report
</button>,
          ],
          "onSubmit": [Function],
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "handleChange": [Function],
              "name": "country",
              "options": Array [
                "Argentina",
                "Peru",
              ],
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "handleChange": [Function],
              "name": "region",
              "options": Array [],
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "handleChange": [Function],
              "name": "coordinates",
              "options": Array [],
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "id": "startDate",
              "name": "startDate",
              "onChange": [Function],
              "placeholder": "Start Date",
              "type": "text",
              "value": "",
            },
            "ref": null,
            "rendered": null,
            "type": "input",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "id": "endDate",
              "name": "endDate",
              "onChange": [Function],
              "placeholder": "End Date",
              "type": "text",
              "value": "",
            },
            "ref": null,
            "rendered": null,
            "type": "input",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "Generate Report",
              "type": "submit",
            },
            "ref": null,
            "rendered": "Generate Report",
            "type": "button",
          },
        ],
        "type": "form",
      },
      false,
    ],
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <div
            className="dashboard"
>
            <div
                        className="total-samples"
            >
                        <h4>
                                    TOTAL
                        </h4>
                        <h3 />
                        <h4>
                                    SAMPLES
                        </h4>
            </div>
            <div
                        className="total-locations"
            >
                        <h4>
                                    TOTAL
                        </h4>
                        <h3>
                                    3
                        </h3>
                        <h4>
                                    LOCATIONS
                        </h4>
            </div>
            <div
                        className="avg-samples"
            >
                        <h4>
                                    AVERAGE
                        </h4>
                        <h3>
                                    0.00
                        </h3>
                        <h4>
                                    SAMPLES/LOCATION
                        </h4>
            </div>
            <div
                        className="avg-reflectance"
            >
                        <h4>
                                    AVERAGE
                        </h4>
                        <h3>
                                    NaN
                        </h3>
                        <h4>
                                    REFLECTANCE
                        </h4>
            </div>
</div>,
          <form
            onSubmit={[Function]}
>
            <DropDown
                        handleChange={[Function]}
                        name="country"
                        options={
                                    Array [
                                                "Argentina",
                                                "Peru",
                                              ]
                        }
            />
            <DropDown
                        handleChange={[Function]}
                        name="region"
                        options={Array []}
            />
            <DropDown
                        handleChange={[Function]}
                        name="coordinates"
                        options={Array []}
            />
            <input
                        id="startDate"
                        name="startDate"
                        onChange={[Function]}
                        placeholder="Start Date"
                        type="text"
                        value=""
            />
            <input
                        id="endDate"
                        name="endDate"
                        onChange={[Function]}
                        placeholder="End Date"
                        type="text"
                        value=""
            />
            <button
                        type="submit"
            >
                        Generate Report
            </button>
</form>,
          false,
        ],
        "className": "Reports",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <div
                className="total-samples"
>
                <h4>
                                TOTAL
                </h4>
                <h3 />
                <h4>
                                SAMPLES
                </h4>
</div>,
              <div
                className="total-locations"
>
                <h4>
                                TOTAL
                </h4>
                <h3>
                                3
                </h3>
                <h4>
                                LOCATIONS
                </h4>
</div>,
              <div
                className="avg-samples"
>
                <h4>
                                AVERAGE
                </h4>
                <h3>
                                0.00
                </h3>
                <h4>
                                SAMPLES/LOCATION
                </h4>
</div>,
              <div
                className="avg-reflectance"
>
                <h4>
                                AVERAGE
                </h4>
                <h3>
                                NaN
                </h3>
                <h4>
                                REFLECTANCE
                </h4>
</div>,
            ],
            "className": "dashboard",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": Array [
                  <h4>
                    TOTAL
</h4>,
                  <h3 />,
                  <h4>
                    SAMPLES
</h4>,
                ],
                "className": "total-samples",
              },
              "ref": null,
              "rendered": Array [
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": "TOTAL",
                  },
                  "ref": null,
                  "rendered": "TOTAL",
                  "type": "h4",
                },
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": 0,
                  },
                  "ref": null,
                  "rendered": 0,
                  "type": "h3",
                },
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": "SAMPLES",
                  },
                  "ref": null,
                  "rendered": "SAMPLES",
                  "type": "h4",
                },
              ],
              "type": "div",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": Array [
                  <h4>
                    TOTAL
</h4>,
                  <h3>
                    3
</h3>,
                  <h4>
                    LOCATIONS
</h4>,
                ],
                "className": "total-locations",
              },
              "ref": null,
              "rendered": Array [
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": "TOTAL",
                  },
                  "ref": null,
                  "rendered": "TOTAL",
                  "type": "h4",
                },
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": 3,
                  },
                  "ref": null,
                  "rendered": 3,
                  "type": "h3",
                },
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": "LOCATIONS",
                  },
                  "ref": null,
                  "rendered": "LOCATIONS",
                  "type": "h4",
                },
              ],
              "type": "div",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": Array [
                  <h4>
                    AVERAGE
</h4>,
                  <h3>
                    0.00
</h3>,
                  <h4>
                    SAMPLES/LOCATION
</h4>,
                ],
                "className": "avg-samples",
              },
              "ref": null,
              "rendered": Array [
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": "AVERAGE",
                  },
                  "ref": null,
                  "rendered": "AVERAGE",
                  "type": "h4",
                },
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": "0.00",
                  },
                  "ref": null,
                  "rendered": "0.00",
                  "type": "h3",
                },
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": "SAMPLES/LOCATION",
                  },
                  "ref": null,
                  "rendered": "SAMPLES/LOCATION",
                  "type": "h4",
                },
              ],
              "type": "div",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": Array [
                  <h4>
                    AVERAGE
</h4>,
                  <h3>
                    NaN
</h3>,
                  <h4>
                    REFLECTANCE
</h4>,
                ],
                "className": "avg-reflectance",
              },
              "ref": null,
              "rendered": Array [
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": "AVERAGE",
                  },
                  "ref": null,
                  "rendered": "AVERAGE",
                  "type": "h4",
                },
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": "NaN",
                  },
                  "ref": null,
                  "rendered": "NaN",
                  "type": "h3",
                },
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": "REFLECTANCE",
                  },
                  "ref": null,
                  "rendered": "REFLECTANCE",
                  "type": "h4",
                },
              ],
              "type": "div",
            },
          ],
          "type": "div",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <DropDown
                handleChange={[Function]}
                name="country"
                options={
                                Array [
                                                "Argentina",
                                                "Peru",
                                              ]
                }
/>,
              <DropDown
                handleChange={[Function]}
                name="region"
                options={Array []}
/>,
              <DropDown
                handleChange={[Function]}
                name="coordinates"
                options={Array []}
/>,
              <input
                id="startDate"
                name="startDate"
                onChange={[Function]}
                placeholder="Start Date"
                type="text"
                value=""
/>,
              <input
                id="endDate"
                name="endDate"
                onChange={[Function]}
                placeholder="End Date"
                type="text"
                value=""
/>,
              <button
                type="submit"
>
                Generate Report
</button>,
            ],
            "onSubmit": [Function],
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "handleChange": [Function],
                "name": "country",
                "options": Array [
                  "Argentina",
                  "Peru",
                ],
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "handleChange": [Function],
                "name": "region",
                "options": Array [],
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "handleChange": [Function],
                "name": "coordinates",
                "options": Array [],
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "id": "startDate",
                "name": "startDate",
                "onChange": [Function],
                "placeholder": "Start Date",
                "type": "text",
                "value": "",
              },
              "ref": null,
              "rendered": null,
              "type": "input",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "id": "endDate",
                "name": "endDate",
                "onChange": [Function],
                "placeholder": "End Date",
                "type": "text",
                "value": "",
              },
              "ref": null,
              "rendered": null,
              "type": "input",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "Generate Report",
                "type": "submit",
              },
              "ref": null,
              "rendered": "Generate Report",
              "type": "button",
            },
          ],
          "type": "form",
        },
        false,
      ],
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
    "disableLifecycleMethods": true,
  },
}
`;
